# D-RoCM

./: .gitignore  AGENTS.md  CMakeLists.txt  PRD.md  PROGRESS_TRACKER.md  README.md  TECH_DESIGN.md  env_setup.sh
.qwen/: settings.json
benchmark/: benchmark.sh
examples/: lidar_emulator.cpp  registry_server.cpp
proto/: common.proto  node.proto  registry.proto
src/: main.cpp
src/core/: error_codes.h  version.cpp  version.h
src/core/coro/: coro_adapter.cpp  coro_adapter.h  stream_awaiters.h
src/core/transport/: transport_manager.cpp  transport_manager.h
src/node/: node_base.cpp  node_base.h
src/registry/: health_checker.cpp  health_checker.h  node_table.cpp  node_table.h  registry_service.cpp  registry_service.h
src/utils/: logger.cpp  logger.h  metrics.cpp  metrics.h
tests/: test_node_table.cpp
